--- a/view/shared/admin.head.shared.mustache
+++ b/view/shared/admin.head.shared.mustache
@@ -7,3 +7,4 @@
     <script src="https://kit.fontawesome.com/773ec69111.js" crossorigin="anonymous"></script>
 </head>
 <body>
+{{>admin.menu.shared}}
