--- a/view/home/course.view.mustache
+++ b/view/home/course.view.mustache
@@ -1,4 +1,8 @@
 {{>head.shared}}
 <h1>{{course.name}}</h1>
 <p>{{course.description}}</p>
+
+{{#accessToken}}
+    <form action="/course/{{course._id}}" method="POST"><button role="menuitem" tabindex="-1" type="submit" class="block px-4 py-2 text-sm text-gray-700">Sign up to course</button></form>
+{{/accessToken}}
 {{>tail.shared}}
