Added ability to quit courses, Also added ability to see number of students part of a course, disabling the user being able to registered to a class more than once

--- a/view/home/course.view.mustache
+++ b/view/home/course.view.mustache
@@ -3,6 +3,13 @@
 <p>{{course.description}}</p>
 
 {{#accessToken}}
-    <form action="/course/{{course._id}}" method="POST"><button role="menuitem" tabindex="-1" type="submit" class="block px-4 py-2 text-sm text-gray-700">Sign up to course</button></form>
-{{/accessToken}}
+    {{^full}}
+        {{^alreadyRegistered}}
+            <form action="/course/{{course._id}}" method="POST"><button role="menuitem" tabindex="-1" type="submit" class="block px-4 py-2 text-sm text-gray-700">Sign up to course {{count}}/{{course.maxSize}}</button></form>
+        {{/alreadyRegistered}}
+        {{#alreadyRegistered}}
+            <h2>You are already registered to this class! view through the dashboard</h2>
+        {{/alreadyRegistered}}
+        {{/full}}
+    {{/accessToken}}
 {{>tail.shared}}
