--- a/view/user/courses.mustache
+++ b/view/user/courses.mustache
@@ -1,16 +1,30 @@
 {{>head.shared}}
+
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <thead class="text-xs text-gray-700 uppercase dark:text-gray-400">
+    <tr>
+        <th scope="col" class="px-6 py-3 bg-gray-50 dark:bg-gray-800">
+            Course name
+        </th>
+        <th scope="col" class="px-6 py-3">
+            Action
+        </th>
+    </tr>
+    </thead>
+    <tbody>
 {{#courses}}
-    <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-        <a href="/user/course/{{_id}}">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{name}}</h5>
-        </a>
-        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{description}}</p>
-        <a href="/user/course/{{_id}}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-            Read more
-            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-            </svg>
-        </a>
-    </div>
+            <tr class="border-b border-gray-200 dark:border-gray-700">
+                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50 dark:text-white dark:bg-gray-800">
+                    {{name}}
+                </th>
+                <td class="px-6 py-4">
+                    <a href="/user/course/{{_id}}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">View</a>
+                    <a href="/user/course/quit/{{_id}}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Quit</a>
+                </td>
+            </tr>
 {{/courses}}
+</tbody>
+</table>
+</div>
 {{>tail.shared}}
