Added Course CRUD

--- a/view/shared/admin.menu.shared.mustache
+++ b/view/shared/admin.menu.shared.mustache
@@ -33,7 +33,7 @@
                         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                         <a href="/admin/dashboard" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Dashboard</a>
                         <a href="/admin/user" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">User List</a>
-                        <a href="/admin/courses" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Course List</a>
+                        <a href="/admin/course" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Course List</a>
                     </div>
                 </div>
             </div>
