--- a/view/shared/head.shared.mustache
+++ b/view/shared/head.shared.mustache
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/773ec69111.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </head>
 <body>
 {{>menu.shared}}
