made ui elements visible

--- a/view/user/course.view.mustache
+++ b/view/user/course.view.mustache
@@ -1,5 +1,5 @@
 {{>head.shared}}
-{{#courses}}
+{{#course}}
     <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
         <a href="/course/{{_id}}">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{name}}</h5>
@@ -12,6 +12,5 @@
             </svg>
         </a>
     </div>
-
-{{/courses}}
+{{/course}}
 {{>tail.shared}}
