--- a/view/home/course.view.mustache
+++ b/view/home/course.view.mustache
@@ -1,5 +1,8 @@
 {{>head.shared}}
 <h1>{{course.name}}</h1>
+<h4>Date:{{course.date}}</h4>
+<h4>Location:{{course.location}}</h4>
+<h4>Cost: {{course.cost}}</h4>
 <p>{{course.description}}</p>
 
     {{#accessToken}}
