--- a/view/admin/courseCRUD/update.mustache
+++ b/view/admin/courseCRUD/update.mustache
@@ -22,6 +22,15 @@
         <label for="maxSize" class="peer-focus:font-medium absolute text-sm text-black-500 duration-300">Max Class size</label>
         <input type="number" value="{{course.maxSize}}" name="maxSize" id="maxSize" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
     </div>
+
+    <div class="relative z-0 w-full mb-5 group">
+        <label for="cost" class="peer-focus:font-medium absolute text-sm text-black-500 duration-300">Course Cost</label>
+        <input type="number" name="cost" value="{{course.cost}}" id="cost" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder="109.00" required />
+    </div>
+    <div class="relative z-0 w-full mb-5 group">
+        <label for="location" class="peer-focus:font-medium absolute text-sm text-black-500 duration-300">Course Location</label>
+        <input type="text" name="location" id="location" value="{{course.location}}" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder="Glasgow" required />
+    </div>
     <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Update</button>
 </form>
 
